<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adventure Run</string>
    
    <string name="tutorial_next">Weiter</string>
    <string name="tutorial_finish">Fertig</string>
    
    <string-array name="drawer_items">
        <item>Track erstellen</item>
        <item>Track laufen</item>
        <item>Meine Tracks</item>
        <item>Statistiken</item>
    </string-array>
    
    <string name="textView_checkpointNum">Gesetzte Checkpoints:</string>
    <string name="textView_checkpointReached">Erreichte Checkpoints: </string>
    
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message">Ein Fehler ist aufgetreten: </string>
    
    <string name="textView_raceInformation_checkpointReached">Checkpoint erreicht!</string>
    <string name="textView_raceInformation_raceWon">Alle Checkpoints erreicht! Gewonnen!</string>
    
    <string name="info_gps_title">GPS-Fehler</string>
    <string name="info_gps_message">GPS ist entweder ausgeschaltet oder es gibt (noch) kein
        gültiges Signal. Bitte schalten Sie Ihr GPS an und starten Sie die Anwendung
        in fünf Minuten erneut.</string>
    <string name="info_race_aborted_title">Abbruch</string>
    <string name="info_race_aborted_message">Das Rennen wurde abgebrochen. Timer und Checkpoints
        wurden zurückgesetzt.</string>
    
    <string name="button_start_create_track">Strecke beginnen</string>
    <string name="button_finish_track">Strecke fertig</string>
    <string name="button_abort_track">Erstellen abbrechen</string>
    <string name="button_add_checkpoint">Checkpoint setzen</string>
    <string name="button_delete_checkpoint">Letzten Checkpoint löschen</string>
    
    <string name="button_open_create_view">Strecke erstellen</string>
    <string name="button_open_race_view">Strecke laufen</string>
    <string name="button_open_track_view">Strecken anzeigen</string>
    
    <string name="button_checkpoint_delete_title">Checkpoint löschen</string>
    <string name="button_checkpoint_delete_message">Möchten Sie den letzten Checkpoint wirklich löschen?</string>
    
    <string name="button_track_delete_title">Strecke löschen</string>
    <string name="button_track_delete_message">Möchten Sie diese Strecke wirklich löschen?</string>
    
    <string name="button_track_finished_title">Strecke fertig?</string>
    <string name="button_track_finished_message">Strecke fertig und abspeichern?</string>
    
    <string name="button_track_abort_title">Erstellen abbrechen?</string>
    <string name="button_track_abort_message">Strecke abbrechen und alle Checkpoints löschen?</string>
    
    <string name="button_set_track_name_title">Strecke benennen</string>
    <string name="button_set_track_name_message">Bitte benenne die Strecke:</string>
    
    <string name="button_play_track">Spielen</string>
    <string name="button_rename_track">Umbenennen</string>
    <string name="button_delete_track">Löschen</string>
    
    <string name="button_rename_track_title">Strecke umbenennen</string>
    <string name="button_rename_track_message">Bitte gib den neuen Namen der Strecke ein:</string>
        
    <string name="button_track_started_dialog_title">Achtung, fertig, los!</string>
    <string name="button_track_started_dialog_message">Bereithalten! Rennen startet in 10 Sekunden.</string>
    
    <string name="button_start_run_track">Rennen starten</string>
    <string name="button_abort_run_track">Rennen abbrechen</string>
    
    <string name="button_inform_accuracy_title">GPS-Genauigkeit zu ungenau</string>
    <string name="button_inform_accuracy_message">Warten Sie einen Moment und versuche Sie es erneut.</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_name_and_save">Benennen und speichern</string>

    <string name="description_compass">This is a compass</string>
    <string name="description_bin">This is a bin</string>
    <string name="description_info">This is a info</string>
    
    <string name="track_name_default">Unnamed</string>
    <string name="number_of_checkpoints">Number of checkpoints: </string>
    
    <string name="action_create">Erstellen</string>
    <string name="action_tutorial">Tutorial</string>
    
    <string name="empty_track_list">Du hast noch keinen Track erstellt. Drücke auf das + um einen Track zu erstellen.</string>
    
    <string name="view_map_info">Tippe auf den Kompass, um kurz die Karte anzuzeigen.</string>
    <string name="remaining_map_views">Verbleibende Kartenaufrufe: </string>
    <string name="no_remaining_map_views">Du kannst die Karte in diesem Spiel nicht mehr anzeigen lassen.</string>
    
    <string name="tutorial_headline1">Herzlich Willkommen</string>
    <string name="tutorial_message1">Mit adventureRun hast Du mehr Spaß beim Laufen! Nachfolgendes Tutorial zeigt Dir, wie du das Beste aus der App holen kannst.</string>
    
    <string name="tutorial_headline2">Zu Beginn…</string>
    <string name="tutorial_message2">…kannst du mit dem “+” Button eine Strecke erstellen und gerätst damit in eine neue Ansicht der App.</string>
    
    <string name="tutorial_headline3">Los geht’s!</string>
    <string name="tutorial_message3">Damit es losgehen kann, klicke auf “Strecke beginnen”(1). Während du Läufst kannst du besondere Ziele, die du später wieder  anlaufen möchtest, als “Checkpoint” setzen (2). </string>
    
    <string name="tutorial_headline4">Erstellte Strecken!</string>
    <string name="tutorial_message4">Hast Du bereits Strecken gespeichert, siehst Du dies in der Liste der Strecken wenn Du die App startest. Dann kannst Du aus Deiner Liste eine der gespeicherten Strecken auswählen und das Abenteuer kann beginnen!</string>
    
    <string name="tutorial_headline5">Abenteuer!</string>
    <string name="tutorial_message5">Wenn Du Dich für eine der Strecken entschieden hast, steht Deinem Abenteuer nichts mehr im Weg!
Im unteren Bereich siehst Du einen Kompass, der dich zu deinem nächsten Checkpoint führt, sowie Informationen zu Distanz, Geschwindigkeit und Zeit. </string>
	<string name ="raceview_distance">Distance \n </string>
	<string name="raceview_speed">Speed \n </string>
	<string name="raceview_distance_cp">Distance \n to CP \n </string>
</resources>
