<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/textView_checkpointNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/textsize_buttons"
        android:text="@string/textView_checkpointNum"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_start_finish_create_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/map_fragment"
        android:textSize="@dimen/textsize_buttons"
        android:text="@string/button_start_create_track" />

    <Button
        android:id="@+id/button_add_checkpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/map_fragment"
        android:text="@string/button_add_checkpoint"
        android:textSize="@dimen/textsize_buttons"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_delete_checkpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_checkpointNum"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textsize_buttons"
        android:text="@string/button_delete_checkpoint" />

</RelativeLayout>
