<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/track_name_default"
        android:textSize="@dimen/textsize_heading"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number_of_checkpoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/number_of_checkpoints"
        android:textSize="@dimen/textsize_normal" />

        <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/number_of_checkpoints" />


    <ListView
        android:id="@+id/score_list"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_track"
            style="@style/adventure_run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/button_play_track" />

        <Button
            android:id="@+id/rename_track"
            style="@style/adventure_run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
		    android:layout_marginEnd="2dp"
            android:text="@string/button_rename_track" />

        <Button
            android:id="@+id/delete_track"
            style="@style/adventure_run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete_track" />
    </LinearLayout>

</LinearLayout>